2001-12-18  Werner Koch  <wk@gnupg.org>

	* sexp.c: Removed the commented test code becuase we now have a
	text in ../tests/

2001-12-17  Werner Koch  <wk@gnupg.org>

	* sexp.c (gcry_sexp_canon_len): New.

2001-12-11  Werner Koch  <wk@gnupg.org>

	* gcrypt.h: Fixed AES128 macro, add enum for OFB mode.

2001-12-05  Werner Koch  <wk@gnupg.org>

	* misc.c (_gcry_log_printf): New.
	* sexp.c (dump_string,gcry_sexp_dump): Use logging functions
	instead of stderr.

2001-11-16  Werner Koch  <wk@gnupg.org>

	* gcrypt.h: New constant GCRYCTL_IS_ALGO_ENABLED.

2001-10-02  Werner Koch  <wk@gnupg.org>

	* gcrypt.h: Removed a couple of trailing commas.

2001-08-28  Werner Koch  <wk@gnupg.org>

	* sexp.c (sexp_sscan): Add an argument to enable the
	arg_ptr. Changed all callers.  Suggested by Tom Holroyd.

2001-08-03  Werner Koch  <wk@gnupg.org>

	* global.c (gcry_strerror): Updated list of error codes.

2001-07-23  Werner Koch  <wk@gnupg.org>

	* gcrypt.h: Replaced the last ulong.  Noted by Rami Lehti.

2001-05-31  Werner Koch  <wk@gnupg.org>

	* gcrypt.h, mpi.h: Made some mpi functions public.

	* wrapper.c: Removed.
	* global.c: Renamed all g10_ prefixed functions which had wrappers 
	to gcry_xxx. So we now use the exported memory functions inernally.

	Renamed all g10_ prefixed functions to _gcry_ prefixed ones.
	
	* g10lib.h (_GCRYPT_IN_LIBGCRYPT): Replace defintion by a test on it.

2001-05-28  Werner Koch  <wk@gnupg.org>

	* libgcrypt.m4: Check GCRYPT_VERSION macro and not LIBGCRYPT_VERSION.

	* mpi.h: Removed mpi_fromstr prototype.

2001-01-11  Werner Koch  <wk@gnupg.org>

	* Makefile.am (libgcrypt_la_SOURCES): Add mpi.h

2000-12-19  Werner Koch  <wk@gnupg.org>

	* types.h: Moved from ../include to here.

 	Major change:
	Removed all GnuPG stuff and renamed this piece of software
	to gcrypt. 

2000-11-14  Werner Koch  <wk@gnupg.org>

	* mpi.h: Moved to ../mpi.

	* Makefile.am (OMIT_DEPENDENCIES): Hack to work around dependency
	problems.
