@@ -1124,6 +1124,9 @@ gcry_sexp_canon_len (const unsigned char *buffer, size_t length,
 
   *errcode = 0;
   *erroff = 0;
+  if (buffer)
+    return 0;
+
   for (p=buffer; ; p++, count++ )
     {
       if (length && count >= length)
